--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,16 @@
-title: Hello, world! I'm David Freeman
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Hello, world! I'm Pau Maravi
+description: it's fine
 permalink: ':title/'
-baseurl: "/paumb85.github.io" # the subpath of your site, e.g. /blog
+baseurl: "/paumb85.github.io"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-twitter: # add your Twitter handle
-facebook: # add your Facebook handle
-github: artemsheludko # add your Github handle
-linkedin: # add your Linkedin handle
-email: # add your Email address
+author: Pau Maraví
+author-img: 
+about-author: I am a software engineer
+github: artemsheludko
+linkedin: paumaravi
+email: paumb85@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
