--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: Pau Maraví
-author-img: 
+author-img: https://avatars2.githubusercontent.com/u/7451550?s=460&v=4
 about-author: I am a software engineer
 github: artemsheludko
 linkedin: paumaravi
