--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author: Pau Maraví
 author-img: https://avatars2.githubusercontent.com/u/7451550?s=460&v=4
 about-author: I am a software engineer
-github: artemsheludko
+github: PauMB85
 linkedin: paumaravi
 email: paumb85@gmail.com
 
