--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Author Settings
 author: Pau Maraví
 author-img: https://avatars2.githubusercontent.com/u/7451550?s=460&v=4
-about-author: I am a software engineer
+about-author: Hi everyone, I'm a software engineer and i'm working on <a href="http://babel.es/es/">Babel</a>
 github: PauMB85
 linkedin: paumaravi
 email: paumb85@gmail.com
