--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ _site
 .jekyll-metadata
 yarn.lock
 node_modules/
-
+.idea/
 ### macOS ###
 *.DS_Store
 .AppleDouble
 .LSOverride
+
+*.lock
 
 # Icon must end with two \r
 Icon
